c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/if_nested_2.c
int main(void) {
    int a = 0;
    int b = 1;
    if (a)
        b = 1;
    else if (~b)
        b = 2;
    return b;
}