c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_parse/empty_if_body.c
int main(void) {
    if (0) else return 0;
}